# exp

./: Cargo.toml  build_packages.json  cargo.toml  collect_icons  packages.json  shell.nix
.github/workflows/: build.yaml  main.yml
src/: build_packages.rs  main.rs
