[package]
name = "nixos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
regex = "1"
reqwest = { version = "0.11.11", features = ["blocking", "brotli"] }
nix-nar = "0.2.0"
